[gd_scene format=3 uid="uid://bkql7a8enl67p"]

[ext_resource type="Script" uid="uid://bhdeivk0vvert" path="res://Scenes/popups.gd" id="1_45svt"]
[ext_resource type="FontFile" uid="uid://cbxajc26jcuq1" path="res://Fonts/Burbank Big Condensed Black.otf" id="2_xpg3u"]
[ext_resource type="Texture2D" uid="uid://b8q0vkog06v51" path="res://Images/person-walking-in-park.webp" id="4_62nyy"]
[ext_resource type="PackedScene" uid="uid://dcs6h5rw72x4v" path="res://Scenes/LevelCompletePopup.tscn" id="4_j6djd"]

[sub_resource type="LabelSettings" id="LabelSettings_p7gdj"]
line_spacing = -23.0
font = ExtResource("2_xpg3u")
font_size = 29
shadow_offset = Vector2(0, 0)

[sub_resource type="FontVariation" id="FontVariation_62nyy"]

[sub_resource type="LabelSettings" id="LabelSettings_xpg3u"]
font = SubResource("FontVariation_62nyy")

[node name="Popups" type="Control" unique_id=1958666967]
layout_mode = 3
anchors_preset = 0
rotation = 0.0008374967
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="UI" type="CanvasLayer" parent="." unique_id=409621439]
script = ExtResource("1_45svt")

[node name="ItemPopup" type="PopupPanel" parent="UI" unique_id=1828356851]
unique_name_in_owner = true
oversampling_override = 1.0
title = "Tile Sample Inside"
initial_position = 1
size = Vector2i(560, 300)
visible = true
max_size = Vector2i(560, 300)
keep_title_visible = true
content_scale_mode = 1

[node name="MainLayout" type="HBoxContainer" parent="UI/ItemPopup" unique_id=1624407756]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 556.0
offset_bottom = 296.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LeftColumn" type="VBoxContainer" parent="UI/ItemPopup/MainLayout" unique_id=2092042484]
clip_contents = true
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="UI/ItemPopup/MainLayout/LeftColumn" unique_id=2145378009]
layout_mode = 2
size_flags_vertical = 0
text = "NUCLEAR"
label_settings = SubResource("LabelSettings_p7gdj")
horizontal_alignment = 1

[node name="InfoLabel" type="Label" parent="UI/ItemPopup/MainLayout/LeftColumn" unique_id=315377222]
custom_minimum_size = Vector2(350, 150)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
text = "Information asdasd asd as das dasd as dasd sa "
label_settings = SubResource("LabelSettings_xpg3u")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Line2D" type="Line2D" parent="UI/ItemPopup/MainLayout/LeftColumn" unique_id=532395366]
position = Vector2(1, -20)
scale = Vector2(1.0444444, 0.99224806)
points = PackedVector2Array(-1, 49, 173, 49, 348, 49)
width = 2.0
default_color = Color(0, 1, 1, 1)

[node name="Line2D5" type="Line2D" parent="UI/ItemPopup/MainLayout/LeftColumn" unique_id=638077604]
position = Vector2(1, 242)
points = PackedVector2Array(-1, 49, 173, 49, 353, 49)
width = 2.0
default_color = Color(0, 1, 1, 1)

[node name="Line2D3" type="Line2D" parent="UI/ItemPopup/MainLayout/LeftColumn" unique_id=2036740239]
position = Vector2(50, 3)
rotation = 1.5707964
points = PackedVector2Array(-1, 49, 173, 49, 353, 49)
width = 2.0
default_color = Color(0, 1, 1, 1)

[node name="Line2D4" type="Line2D" parent="UI/ItemPopup/MainLayout/LeftColumn" unique_id=1900305998]
position = Vector2(397, -1)
rotation = 1.5707964
points = PackedVector2Array(-1, 49, 173, 49, 353, 49)
width = 2.0
default_color = Color(0, 1, 1, 1)

[node name="Line2D2" type="Line2D" parent="UI/ItemPopup/MainLayout/LeftColumn" unique_id=1072972044]
position = Vector2(-4, -48)
points = PackedVector2Array(-1, 49, 173, 49, 353, 49)
width = 2.0
default_color = Color(0, 1, 1, 1)

[node name="Line2D6" type="Line2D" parent="UI/ItemPopup/MainLayout/LeftColumn" unique_id=981529975]
position = Vector2(-4, -48)
points = PackedVector2Array(-1, 49, 173, 49, 222, 49, 353, 49)
width = 2.0
default_color = Color(0, 1, 1, 1)

[node name="OrbImage" type="TextureRect" parent="UI/ItemPopup/MainLayout" unique_id=1123963535]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.08
texture = ExtResource("4_62nyy")
expand_mode = 3
stretch_mode = 4

[node name="LevelCompletePopup" parent="UI" unique_id=1686940586 instance=ExtResource("4_j6djd")]
